# Solitons1d_Cracow

./: pyproject.toml
scripts/: play.ipynb
src/solitons1d/: __init__.py  soliton.py
